site nao precisou copiar o codigo de ngm esse site foi codado do zero NO GOOOD PLS NO o rapaz ao lado é um veterano d

--- a/primeira_pagina-main/style.css
+++ b/primeira_pagina-main/style.css
@@ -1,9 +1,8 @@
 body{
-    background-image: url(imagens/bubas.jpg);
+    background-image: url(imagens/graduationlol.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
 
 }
 h1{
@@ -11,19 +10,72 @@ h1{
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: black;
     font-size: 50px;
+    text-align: center;
 }
 
 p{
     color: black;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: white;
     font-size: 40px;
-
+    text-align: center;
+    position: relative;
+    bottom: 205px;
 }
 h2{
+    font-size: 50px;
+    color:skyblue;
+
+}
+#oi{
+    height: 100px;
+    position: absolute;
+    right: 0%;
+    top: 0%;
+}
+h3{
+    font-family: 'Press Start 2P'; 
+    font-size: 40px;
+   
+
+}
+h4{
+    font-size: 40px;
+
+
+}
+li{
     font-size: 30px;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: white;
-    color: black;
+
+    
+
+}
+#messi{
+    height: 100px;
+
+}
+footer{
+    background: linear-gradient(#ce0ce8,#ff00b7);
+    
+
+
+
+}
+video{
+    height: 300px;
+    position: relative;
+    left: 84%;
+    bottom: 305px;
+
 }
 
+/* -webkit-text-stroke-color:white;
+    -webkit-text-stroke-width: 2px;/*
+
+/*
+ background-image: url(imagens/bubas.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+SÓ PRA SALVAR AI'""'''''''
+/*
+-webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
